--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -1,4 +1,79 @@
-h1 {
-    font-weight: normal;
-    font-color: red;
+body{
+    background-color: #aad4cf;
+    font-family: Arial, Helvetica, sans-serif;
+}
+header{
+    max-width: 1140px;
+    margin: 0 auto;
+    background-color: #c9e0de;
+}
+.row {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.row ul{
+    text-align: center;
+}
+.row li{
+    display: inline-block;  
+}
+.row li::before{
+    content:"|";
+}
+.row a{
+    margin: 10px;
+    padding: 10px;
+}
+.eminem{
+    background-image: url("../recourses/lone-starfish-wide.jpg");
+    background-repeat: no-repeat;
+    padding:100px;
+    
+    max-width: 1140px;
+    margin: 0 auto;
+    
+}
+.eminem h1{
+    text-align: center;
+    color: white;
+}
+.wrapper{
+    font-family:Arial, Helvetica, sans-serif;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.wrapper img{
+    width: 180px;
+    float: left;
+    margin-right: 15px;
+}
+.wrapper p{
+    font-size: 13px;
+}
+section {
+    max-width: 1140px;
+    margin: 0 auto;
+    background-color: #c9e0de;
+}
+.contact-form{
+    max-width: 1140px;
+    margin: 0 auto;
+    background-color: #c9e0de;
+    height: 900px;
+    width: 1090px;
+    border: 1px solid black;
+    padding: 30px 15px;
+    margin: auto;
+}
+input[type=text] {
+    width: 100%;
+    height: 20px;
+}
+input[type=email] {
+    width: 100%;
+    height: 20px;
+}
+textarea {
+    width: 100%;
+    height: 70px;
 }
