--- a/final-project/css/style.css
+++ b/final-project/css/style.css
@@ -246,6 +246,8 @@ input[type=submit] {
 .contact .wrapper, .location .wrapper {
   background-color: white;
 }
+
+/* Hours of operation */
 .hours .wrapper {
   background-color: white;
 }
@@ -328,11 +330,6 @@ footer a {
 
 
 
-
-
-
-
-
 /*  DESKTOP---------------- */
 @media screen and (min-width: 760px) {
   .wrapper {
@@ -377,6 +374,15 @@ footer a {
     height: 35px;
     margin-bottom: 10px;
   }
+  .wrapper .aboutus {
+      width: 500px;
+      float: left;
+      margin-right: 15px;
+      margin-left: 90px;
+  }
+  .aboutuss {
+    padding-bottom: 45px;
+  }
 
   /* ------GRID------ */
   .services {
@@ -407,28 +413,27 @@ footer a {
     grid-column: 5 / span 2;
     grid-row: 2 / span 1 ;
   }
-  
+
+  /* _________our team: use flex for each picture and text of john doe and bob rite. flex-basis for containing half the width, set orders for them ____________________ */
+
 
   .team .wrapper{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    display: flex;
+    flex-wrap: wrap;
   }
   .team .wrapper .johndoe {
-    grid-column: 1 / span 1;
-    grid-row: 1 / span 1;
+    flex-basis: 50%;
   }
   .team .wrapper .johnbio {
-    grid-column: 2 / span 1;
-    grid-row: 1 / span 1;
+    flex-basis: 50%;
   }
   .team .wrapper .bobrite {
-    grid-column: 2 / span 1;
-    grid-row: 2 / span 1;
+    order: 2;
+    flex-basis: 50%;
   }
   .team .wrapper .bobbio {
-    grid-column: 1 / span 1;
-    grid-row: 2 / span 1;
+    order: 1;
+    flex-basis: 50%;
   }
   .team .wrapper .johndoe {
     background-color: #fff;
@@ -445,7 +450,5 @@ footer a {
     width: 600px;
   }
 }
-
-
 
 
